@@ -406,6 +406,7 @@ FLOAT_PROP_TEST("GridXformResidualLimit", mWinApp->mMultiGridTasks->, RRGResidLi
 BOOL_PROP_TEST("ShowMulGridRefine", mWinApp->mMultiGridTasks->, ShowRefineAfterRealign)
 FLOAT_PROP_TEST("MulGridRefineMinField", mWinApp->mMultiGridTasks->, RefineMinField)
 FLOAT_PROP_TEST("MulGridMaxRefineDiff", mWinApp->mMultiGridTasks->, MaxRefineShiftDiff)
+INT_PROP_TEST("MailConnectTimeout", mWinApp->mMailer->, ConnectTimeout)
 
 
 #endif
