@@ -529,6 +529,11 @@
             valid.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>MailConnectTimeout</TD>
+          <TD>Set to the number of seconds to allow for establishing a connection to the mail 
+              server; the default is 7.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>SocketServerIP</TD>
           <TD>Socket ID and IP address of a server that SerialEM will connect to through
             its socket interface.&nbsp;&nbsp; The ID is an arbitrary positive number
