@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/28/25: Made email connection take only 7 seconds to time out and added a
+property to control the timeout.
+
 3/27/25: Added ability to retry a stage move after a COM error, activated by
 property RetryStageMove.
 
